test/typechecker/fail/type_access_enum.fu
enum Foo { A(i32) }
fun test() {
    const x : Foo.A = 3;
}
